# city_explorer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml
app/: __init__.py  config.py  curation.py  gmaps.py  google_geocoding.py  itinerary.py  llm.py  main.py  models.py  places.py  route.py  sessions.py
deploy/: README.md
shortcuts/: Plan-City-Tour.md  README.md  Refine-City-Tour.md
tests/: conftest.py  test_direct_plan_coerce.py  test_gmaps.py  test_itinerary_summary.py  test_llm_heuristic.py  test_llm_normalize.py  test_places_free_category.py  test_route.py
web/: .env.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
